Se agrega el contenido principal y se ajustan detalles con los links y metadatos

--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
-<html lang="es">
+<html LANG="Spanish">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="DC.Language" scheme="RFC1766" content="Spanish">
+    <meta name="AUTHOR" content="Romeliny">
+    <meta name="REPLY-TO" content="calzadoromeliny2004@gmail.com">
+    <link rev="made" href="mailto:calzadoromeliny2004@gmail.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
     <title>Romeliny</title>
+    <link rel="icon" href="./assets/Logo.svg">
+    <link rel="stylesheet" href="./css/styles.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+
+    <!-- responsive -->
+
+    <!-- Mobile big/tablet small -->
+    <link rel="stylesheet" href="./css/mobileBig-tabletSmall.css" media="screen and (min-width: 600px)">
+    <!-- Tablet -->
+    <link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width: 800px)">
+    <!-- BigTablet -->
+    <link rel="stylesheet" href="./css/bigTablet.css" media="screen and (min-width: 1024px)">
+    <!-- Laptop -->
+    <link rel="stylesheet" href="./css/laptop.css" media="screen and (min-width: 1440px)">
+
+
+    <!-- Meta datos complementarios -->
+    <meta name="description"
+        content="Empresa orgullosamente colombiana dedicada a la fabricación de calzado, con el fin de brindarle elegancia, confort y sobre todo comodidad al pueblo colombiano.">
+    <meta name="keywords"
+        content="calzado, romeliny, zapatos elegantes, zapatos, elegante, formal, calzado elegante, restrepo, calzado restrepo, calidad, calzado de calidad, tallas de zapatos, zapatos hombre, zapatos mujer, online, zapatos para colegio, zapatos negros" />
+    <meta name="Resource-type" content="Homepage">
+    <meta name="DateCreated" content="Sun, 21 August 2022 00:00:00 GMT+1">
+    <meta name="robots" content="ALL">
 </head>
 
 <body>
@@ -40,21 +66,21 @@
         <nav class="nav-header-center">
             <ul class="nav-header__list">
                 <li class="nav-header__list__item">
-                    <a href="">
+                    <a href="https://www.instagram.com/calzado_romeliny/">
                         <h4>
                             Novedades
                         </h4>
                     </a>
                 </li>
                 <li class="nav-header__list__item">
-                    <a href="">
+                    <a href="http://romeliny.com/tienda.html">
                         <h4>
                             Tienda
                         </h4>
                     </a>
                 </li>
                 <li class="nav-header__list__item">
-                    <a href="">
+                    <a href="http://romeliny.com/contacto.html">
                         <h4>
                             Contacto
                         </h4>
@@ -108,7 +134,7 @@
             <nav>
                 <ul class="nav-header__list">
                     <li class="nav-header__list__item">
-                        <a href="">
+                        <a href="https://www.instagram.com/calzado_romeliny/">
                             <ion-icon name="newspaper-outline"></ion-icon>
                             <h4>
                                 Novedades
@@ -116,7 +142,7 @@
                         </a>
                     </li>
                     <li class="nav-header__list__item">
-                        <a href="">
+                        <a href="http://romeliny.com/tienda.html">
                             <ion-icon name="storefront-outline"></ion-icon>
                             <h4>
                                 Tienda
@@ -124,7 +150,7 @@
                         </a>
                     </li>
                     <li class="nav-header__list__item">
-                        <a href="">
+                        <a href="http://romeliny.com/contacto.html">
                             <ion-icon name="call-outline"></ion-icon>
                             <h4>
                                 Contacto
@@ -220,7 +246,8 @@
                 <a href="https://www.instagram.com/calzado_romeliny/">
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
-                <a href="">
+                <a
+                    href="https://api.whatsapp.com/send/?phone=573142467055&text=Me+gustar%C3%ADa+tener+mas+informacion&type=phone_number&app_absent=0">
                     <ion-icon name="logo-whatsapp"></ion-icon>
                 </a>
             </div>
@@ -231,7 +258,7 @@
 
         <section class="derechos">
             <p>
-                COPYRIGHT © 2021 ROMELINY
+                COPYRIGHT © 2022 ROMELINY
             </p>
         </section>
 
@@ -263,11 +290,225 @@
         </a>
     </aside>
 
+    <!-- End header, aside left & login -->
+    <!-- Start principal main -->
     <main>
 
-    </main>
-    <footer>
+        <section class="presentacion">
+            <article class="presentacion__left">
+                <h1 class="presentacion__title">
+                    R<span>o</span>meliny
+                </h1>
+                <h2 class="presentacion__subTitle">
+                    PURO CUERO
+                </h2>
+                <div class="separador__presentacion"></div>
+                <p class="presentacion__text">
+                    Zapatos artesanales para brindarte <br>
+                    elegancia y confort en tus pies.
+                </p>
+                <a class="btn-presentacion" href="">
+                    CONOCE MÁS
+                </a>
+            </article>
+            <figure class="presentacion__image">
+                <img src="./assets/img/ImagenMain.png" alt="">
+            </figure>
+        </section>
 
+        <section class="categorias">
+            <article class="title">
+                <div class="separador__categoria"></div>
+                <h2 class="separador__categoria__title">
+                    COMPRA POR CATEGORIA
+                </h2>
+                <div class="separador__categoria"></div>
+            </article>
+            <div class="categorias__contenedor-componentes">
+                <a href="" class="conponent-categoria" id="casual">
+                    <div class="conponent-categoria__gradient">
+                        <h3 class="conponent-categoria__text">Casual</h3>
+                    </div>
+                </a>
+                <a href="" class="conponent-categoria" id="formal">
+                    <div class="conponent-categoria__gradient">
+                        <h3 class="conponent-categoria__text">Formal</h3>
+                    </div>
+                </a>
+                <a href="" class="conponent-categoria" id="deportivo">
+                    <div class="conponent-categoria__gradient">
+                        <h3 class="conponent-categoria__text">Deportivo</h3>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+        <section class="productos">
+            <article class="productos__article">
+                <h1 class="productos__title">
+                    NUESTROS PRODUCTOS
+                </h1>
+                <p class="productos__text">
+                    Nos preocupamos por realizar productos<br>
+                    de excelente calidad confeccionados<br>
+                    100% con cuero, transmitiendo el amor<br>
+                    por el arte de crear zapatos.
+                </p>
+            </article>
+            <div class="separador__productos"></div>
+            <article class="productos__component">
+                <div class="porductos__component__colum">
+                    <div class="productos__item">
+                        <img src="./assets/img/economia.png" alt="">
+                        <p>
+                            Los mejores precios <br>
+                            somos distribuidores
+                        </p>
+                    </div>
+                    <div class="productos__item">
+                        <img src="./assets/img/calidad.png" alt="">
+                        <p>
+                            Productos con buena <br>
+                            calidad y garantia
+                        </p>
+                    </div>
+                </div>
+                <div class="porductos__component__colum">
+                    <div class="productos__item">
+                        <img src="./assets/img/envios.png" alt="">
+                        <p>
+                            Envios a nivel <br>
+                            nacional
+                        </p>
+                    </div>
+                    <div class="productos__item">
+                        <img src="./assets/img/colombia.png" alt="">
+                        <p>
+                            Producto 100% <br>
+                            colombiano
+                        </p>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <section class="conocenos">
+            <div class="conocenos__gradient">
+                <article class="conocenos__article">
+                    <h1>
+                        CONOCÉNOS
+                    </h1>
+                    <img class="conocenos__logo" src="./assets/img/logo-circulo.svg" alt="">
+                    <p>
+                        Somos una empresa orgullosamente colombiana dedicada a la fabricación de calzado, con el fin de
+                        brindarle elegancia, confort y sobre todo comodidad al pueblo colombiano.
+                        Nuestra producción se centra especialmente en la elaboración de zapato elegante hecho con los
+                        mejores materiales, garantizando calidad y duración.
+                    </p>
+                    <figure class="conocenos__social">
+                        <a
+                            href="https://api.whatsapp.com/send/?phone=573142467055&text=Me+gustar%C3%ADa+tener+mas+informacion&type=phone_number&app_absent=0">
+                            <img src="./assets/iconos/whatsapp.svg" alt="">
+                        </a>
+                        <a href="https://www.facebook.com/Romeliny1">
+                            <img src="./assets/iconos/facebook.svg" alt="">
+                        </a>
+                        <a href="https://www.instagram.com/calzado_romeliny/">
+                            <img src="./assets/iconos/instagram.svg" alt="">
+                        </a>
+                    </figure>
+                </article>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+        <section class="footer__information">
+            <article>
+                <figure class="footer__logo">
+                    <img src="./assets/img/logo-white.svg" alt="">
+                </figure>
+                <div class="footer__social">
+                    <a
+                        href="https://api.whatsapp.com/send/?phone=573142467055&text=Me+gustar%C3%ADa+tener+mas+informacion&type=phone_number&app_absent=0">
+                        <img src="./assets/iconos/whatsapp.svg" alt="">
+                    </a>
+                    <a href="https://www.facebook.com/Romeliny1">
+                        <img src="./assets/iconos/facebook.svg" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/calzado_romeliny/">
+                        <img src="./assets/iconos/instagram.svg" alt="">
+                    </a>
+                </div>
+            </article>
+            <div class="footer__separador"></div>
+            <nav class="footer__nav">
+                <ul>
+                    <li>
+                        INFORMACIÖN
+                    </li>
+                    <li>
+                        <a href="http://romeliny.com/contacto.html">
+                            Conocénos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://romeliny.com/contacto.html">
+                            Contáctanos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Terminos y condiciones
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        SOCIAL
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/Romeliny1">
+                            Facebook
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/calzado_romeliny/"">
+                            Instagram
+                        </a>
+                    </li>
+                    <li>
+                        <a href="
+                            https://api.whatsapp.com/send/?phone=573142467055&text=Me+gustar%C3%ADa+tener+mas+informacion&type=phone_number&app_absent=0">
+                            Whatsapp
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="developer">
+                <p>
+                    <b>Desarrollador</b> <br>
+                    Jeisson Gavilán
+                </p>
+                <figure>
+                    <a href="https://jeissonalexander.000webhostapp.com/index.html">
+                        <img src="./assets/iconos/web.svg" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/amarokdev/">
+                        <img src="./assets/iconos/instagram.svg" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/in/jeisson-alexander/">
+                        <img src="./assets/iconos/linkedin.svg" alt="">
+                    </a>
+                </figure>
+            </div>
+        </section>
+        <section class="footer__derechos">
+            <p>
+                COPYRIGHT © 2022 ROMELINY TODOS LOS DERECHOS RESERVADOS
+            </p>
+        </section>
     </footer>
 
     <script src="./scripts/app.js"></script>
